--- a/package.json
+++ b/package.json
@@ -15,13 +15,17 @@
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-markdown": "^8.0.0",
-    "react-syntax-highlighter": "^15.4.5"
+    "react-syntax-highlighter": "^15.4.5",
+    "styled-components": "^5.3.3",
+    "styled-normalize": "^8.0.7"
   },
   "devDependencies": {
     "@types/node": "17.0.15",
     "@types/react": "17.0.39",
     "@types/react-syntax-highlighter": "^13.5.2",
+    "@types/styled-components": "^5.1.22",
     "autoprefixer": "^10.4.2",
+    "babel-plugin-styled-components": "^2.0.2",
     "eslint": "8.8.0",
     "eslint-config-next": "12.0.10",
     "postcss": "^8.4.6",
