--- a/package.json
+++ b/package.json
@@ -11,10 +11,12 @@
     "date-fns": "^2.28.0",
     "gray-matter": "^4.0.3",
     "next": "12.0.10",
+    "next-connect": "^0.12.1",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-markdown": "^8.0.0",
     "react-syntax-highlighter": "^15.4.5",
+    "sitemap": "^7.1.1",
     "styled-components": "^5.3.3",
     "styled-normalize": "^8.0.7"
   },
